# dutils0

./: .gitignore  README.md  pyproject.toml  requirements.txt
chemutils-main/: .coveragerc  .gitignore  README.md  generate_selection_language.sh  pyproject.toml
chemutils-main/.github/: CODEOWNERS
chemutils-main/.github/workflows/: full_run.yml
chemutils-main/chemutils/: CHARM_20221101.txt  __init__.py  filter.py  math.py  openeye.py  rdmol_from_oemol.py  tmalign.py
chemutils-main/chemutils/chemaxon/: __init__.py  ion_class.py  logd.py  logp.py  major_microspecies.py  molecule.py  pka.py  tautomer.py
chemutils-main/chemutils/chemaxon/jvm/: __init__.py
chemutils-main/chemutils/draw/: __init__.py  color.py  display.py  draw.py  highlight.py  label.py  to_rdkit.py
chemutils-main/chemutils/fs/: __init__.py  read_molecule.py  write_molecule.py
chemutils-main/chemutils/maths/: __init__.py  convert.py  types.py
chemutils-main/chemutils/maths/metric/: gdt_ts.py
chemutils-main/chemutils/maths/vector/: __init__.py  norm.py
chemutils-main/chemutils/molecule/: __init__.py  canonicalize.py  charge.py  conformer.py  construct_molecule.py  coordinates.py  create.py  embed.py  enhanced_stereo.py  equal.py  ertl.py  format.py  hydrogens.py  inchi.py  mask.py  merge.py  neutralize.py  perceive.py  reaction.py  read.py  remove.py  representative.py  scaffold.py  similarity.py  smarts.py  smiles.py  split.py  standardise.py  stereo.py  symmetry.py  tags.py  tetrahedron.py  write.py
chemutils-main/chemutils/molecule/cip/: assignment.py  compare.py  priority.py  set.py
chemutils-main/chemutils/molecule/cip/digraph/: __init__.py  atom.py  digraph.py  duplicated.py  implicit.py  node.py  phantom.py
chemutils-main/chemutils/molecule/filter/: __init__.py  medchem.py  medchem_filter_2025-04-14.yaml  medchem_filter_2025-04-21.yaml  medchem_filter_2025-04-28.yaml  medchem_filter_2025-05-12.yaml  medchem_filter_2025-06-09.yaml
chemutils-main/chemutils/molecule/graph/: __init__.py  adjacency.py  automorphism.py  homomorphism.py  mcs.py  properties.py  query.py  substructure.py  utils.py
chemutils-main/chemutils/molecule/graph/automorphism_group/: __init__.py  automorphisms.py  generator.py  group.py  nauty.py  subgroup.py  utils.py
chemutils-main/chemutils/molecule/hydrogen_bonds/: __init__.py  acceptor.py  donor.py  electrons.py
chemutils-main/chemutils/molecule/rmsd/: __init__.py  atoms.py  match.py  molecule.py  points.py
chemutils-main/chemutils/molecule/selection/: SelectionLanguage.g4  __init__.py  atom.py  evaluate.py  subset.py  types.py  visitor.py
chemutils-main/chemutils/molecule/transform/: __init__.py  molecule.py  transformation.py
chemutils-main/chemutils/nglview/: __init__.py  ipython.py  widget.py
chemutils-main/chemutils/props/: __init__.py  alerts.py  atomic.py  blood_brain_barrier.py  bonds_rings.py  cns_mpo.py  druglike.py  filter.py  fingerprint.py  hydrogen_bonds.py  identifier.py  logd.py  logp.py  medchem.py  pka.py  property.py  synthetic_accessibility.py  tpsa.py  uncharged.py
chemutils-main/chemutils/protein/: __init__.py  _chemical_component_dictionary.py  construct_protein.py  create.py  mapping.py  mutation.py  residues.py  sequence.py
chemutils-main/chemutils/protein/alignment/: __init__.py  alignment.py  from_nomenclature.py  to_nomenclature.py  types.py
chemutils-main/chemutils/protein/pdb/: __init__.py  conect.py  convert.py  dbref.py  link.py  modify.py  seqadv.py  seqres.py
chemutils-main/tests/: test_no_chemaxon.py
chemutils-main/tests/chemutils/: cip_validation.py  cip_validation_2d.sdf  cip_validation_3d.sdf  ethylene-serialised-old.pickle  test_draw.py  test_filter.py  test_math.py  test_nglview.py  test_openeye.py  test_pickle.py  test_rdmol_from_oemol.py  test_reaction.py  test_tmalign.py
chemutils-main/tests/chemutils/chemaxon/: test_cxmol.py  test_ion_class.py  test_jvm.py  test_logd.py  test_logp.py  test_major_microspecies.py  test_pka.py  test_tautomer.py
chemutils-main/tests/chemutils/data/: cistrans_macrocycle.sdf
chemutils-main/tests/chemutils/fs/: conftest.py  test_read_molecule.py  test_write_molecule.py
chemutils-main/tests/chemutils/maths/: test_convert.py  test_vector_norm.py
chemutils-main/tests/chemutils/maths/metric/: test_gdt_ts.py
chemutils-main/tests/chemutils/molecule/: get_rmsd_between_atoms_mol2_coords.csv  get_rmsd_between_molecules_different_order_mol1_coords.csv  get_rmsd_between_molecules_different_order_mol2_coords.csv  get_rmsd_between_molecules_same_order_mol2_coords.csv  hbonds.yaml  test_canonicalize.py  test_charge.py  test_conformer.py  test_construct_molecule.py  test_coordinates.py  test_create.py  test_embed.py  test_enhanced_stereo.py  test_equal.py  test_ertl.py  test_filter.py  test_format.py  test_hydrogen_bonds.py  test_hydrogens.py  test_inchi.py  test_mask.py  test_merge.py  test_modify.py  test_perceive.py  test_read_write.py  test_remove.py  test_rmsd.py  test_scaffold.py  test_sdf.py  test_selection.py  test_similarity.py  test_smiles.py  test_split.py  test_standardise.py  test_stereo.py  test_symmetry.py  test_tags.py  test_tetrahedron.py
chemutils-main/tests/chemutils/molecule/cip/: test_cip.py  test_compare.py  test_digraph.py  test_priorities.py  test_set.py
chemutils-main/tests/chemutils/molecule/data/: enhanced_stereo.sdf
chemutils-main/tests/chemutils/molecule/graph/: smarts.yaml  test_adjacency.py  test_automorphism.py  (+4 more)
chemutils-main/tests/chemutils/props/: drug_smiles.py  test_atomic.py  test_blood_brain_barrier.py  test_bond_rings.py  test_chemaxon.py  test_clogp.py  test_cns_mpo.py  test_composite.py  test_fingerprint.py  test_lipinski.py  test_medchem.py  test_props.py  test_qed.py  test_representative.py  test_synthetic_accessibility_score.py  test_tpsa.py  test_xlogp.py
chemutils-main/tests/chemutils/protein/: test_alignment.py  test_alignment_biopython.py  test_chemical_component.py  test_construct_protein.py  test_create.py  test_mutation.py  test_residues.py  test_sequences.py
chemutils-main/tests/data/: drugs.yaml  regen_drugs.py
(+43 files in other folders)
