[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dutils0"
version = "0.1.0"
description = "Utility package"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["dutils0*"]

# Pixi: use conda-forge for Python; run `pixi install` to create env with dutils0 in editable mode
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
dutils0 = { path = ".", editable = true }
